Fixed an issue with the footer alignment.

--- a/_sass/components/footer/_footer.scss
+++ b/_sass/components/footer/_footer.scss
@@ -4,5 +4,6 @@
 
 footer {
     padding-top: 20px;
+    padding-bottom: 20px;
     text-align: right;
 }
